Squashed commit of the following:
commit 5607c823ade9369017ebd3c6e010cf2b156bafdf
Author: Andre Soares <andregsilv@gmail.com>
Date:   Tue Jul 4 16:15:42 2023 -0300

    rename to hsmlib

commit 5535bf424036680a1cc1d3eb91e66ebba815a782
Author: Andre Soares <andregsilv@gmail.com>
Date:   Tue Jul 4 16:06:21 2023 -0300

    rename package

commit 50f6c338322f81475734f87af7aab7216b4703b4
Author: Andre Soares <andregsilv@gmail.com>
Date:   Tue Jul 4 16:03:07 2023 -0300

    better logs

commit ab56f7d844e0d4ec2eab93e3c147ee6f93ecbad0
Author: Andre Soares <andregsilv@gmail.com>
Date:   Tue Jul 4 15:53:05 2023 -0300

    better log

commit a5e86eacefaf41ab011e1c341c01fb940a1949a8
Author: Andre Soares <andregsilv@gmail.com>
Date:   Tue Jul 4 15:49:41 2023 -0300

    basic mock working

commit bcf8433f8171d41f740022259d2440ae04b97097
Author: Andre Soares <andregsilv@gmail.com>
Date:   Tue Jul 4 15:12:31 2023 -0300

    refactor

commit 5814b45518a0a5673aaa79ec5fd439f8e503fdcc
Author: Andre Soares <andregsilv@gmail.com>
Date:   Tue Jul 4 12:04:20 2023 -0300

    Ignore debug bin

commit c88a6164b18ef6d6eb947586958085cf91e3d3d3
Author: Andre Soares <andregsilv@gmail.com>
Date:   Tue Jul 4 11:55:41 2023 -0300

    some improvements

commit 9b17e722ff9c7e0be9e76716efeb1d074630adf8
Author: Andre Soares <andregsilv@gmail.com>
Date:   Mon Jul 3 19:32:15 2023 -0300

    should work

commit d24da95742ed7f37879eddc1d02f00284834ff50
Author: Andre Soares <andregsilv@gmail.com>
Date:   Mon Jul 3 15:53:05 2023 -0300

    outer

commit 6b5c10a3bdf143b9382b3b391c72256e53762a81
Author: Andre Soares <andregsilv@gmail.com>
Date:   Mon Jul 3 15:52:15 2023 -0300

    outer design

commit 8ed2b92f814d1e16cc3ef5c6ab24f238b93aa58a
Author: Andre Soares <andregsilv@gmail.com>
Date:   Mon Jul 3 15:35:46 2023 -0300

    payload

commit acf7f2fe0f20a8167f9f136ebe344021df7bd009
Author: Andre Soares <andregsilv@gmail.com>
Date:   Mon Jul 3 15:29:10 2023 -0300

    temp

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,14 +5,22 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch Package",
+            "name": "Start Multiplexer",
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceFolder}",
-            "env": {
-                "TARGET_ADDR": ":9999",            
-            }
+            "program": "${workspaceFolder}/cmd/multiplexer",
+            "args": [
+                "--target",
+                "localhost:1501",
+            ]
+        },
+        {
+            "name": "Start Mock",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/cmd/mock",
         }
     ]
 }
