--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,6 +15,16 @@
             ]
         },
         {
+            "name": "Start Multiplexer (send to EC2)",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/cmd/multiplexer",
+            "args": [
+                "--target", "54.232.202.209:1500",
+            ]
+        },
+        {
             "name": "Start Mock",
             "type": "go",
             "request": "launch",
@@ -26,14 +36,25 @@
             ]
         },
         {
-            "name": "Send Echo",
+            "name": "Send Echo (local)",
             "type": "go",
             "request": "launch",
             "mode": "auto",
             "program": "${workspaceFolder}/cmd/sendecho",
             "args": [
-                "localhost:1501",
+                "localhost:1500",
                 "hello_world",
+            ]
+        },
+        {
+            "name": "Send Echo (EC2)",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/cmd/sendecho",
+            "args": [
+                "54.232.202.209:1500",
+                "This is an ECHO message!",
             ]
         },
     ]
