Squashed commit of the following:
commit c67f5f03808517afbf85738ef3cd4af9aeb5a4cf
Author: Andre Soares <andregsilv@gmail.com>
Date:   Thu Oct 5 11:08:58 2023 -0300

    better logs

commit 0dc2a7aaf0c26dd36fd8b04ea8060fa3df70839b
Author: Andre Soares <andregsilv@gmail.com>
Date:   Thu Oct 5 10:23:45 2023 -0300

    short descriptions

commit 78a909cd7584dd5d6de7cfdcf3132da7c2b16857
Author: Andre Soares <andregsilv@gmail.com>
Date:   Thu Oct 5 09:52:50 2023 -0300

    cmds

commit b5e0feec60a62b44675abe270345ab507f27cd3b
Author: Andre Soares <andregsilv@gmail.com>
Date:   Thu Oct 5 09:49:47 2023 -0300

    better echo

commit 47c7cc21c22a60181bca10e6c12abef9af9e2e8c
Author: Andre Soares <andregsilv@gmail.com>
Date:   Wed Oct 4 18:46:58 2023 -0300

    Improvements

commit 0d16aba49ac4b5b5da94b9ac340894683b1fd836
Author: Andre Soares <andregsilv@gmail.com>
Date:   Wed Oct 11 09:46:28 2023 -0300

    remove unneded closer

commit 9e1c86497fe4974083d0c394595bd0a3249ea984
Author: Andre Soares <andregsilv@gmail.com>
Date:   Wed Oct 4 18:46:58 2023 -0300

    fix launch

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,17 +26,6 @@
             ]
         },
         {
-            "name": "Send Echo",
-            "type": "go",
-            "request": "launch",
-            "mode": "auto",
-            "program": "${workspaceFolder}/cmd/send",
-            "args": [
-                "--target", ":3610",
-                "echo", "hello_world",
-            ]
-        },
-        {
             "name": "Send Raw",
             "type": "go",
             "request": "launch",
@@ -46,6 +35,42 @@
                 "--target", ":3610",
                 "raw", "--auto-header",
                 "B20005Hello",
+            ]
+        },
+        {
+            "name": "Send Echo",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/cmd/send",
+            "args": [
+                "--verbose",
+                "--target", ":3610",
+                "echo", "hello_world",
+            ]
+        },
+        {
+            "name": "Send Healthcheck",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/cmd/send",
+            "args": [
+                "--verbose",
+                "--target", ":3610",
+                "healthcheck",
+            ]
+        },
+        {
+            "name": "Send Translate Key",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/cmd/send",
+            "args": [
+                "--verbose",
+                "--target", ":3610",
+                "translate", "key",
             ]
         },
     ]
